--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,10 +30,20 @@
         </activity>
         <activity
             android:name=".ExerciseActivity"
+            android:exported="true"
             android:label="@string/title_activity_exercise"
             android:parentActivityName=".ExercisePlanActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true">
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.kedrad.selftherapyball.ExercisePlanActivity" />
+        </activity>
+        <activity
+            android:name=".BallLocationActivity"
+            android:exported="true"
+            android:label="@string/title_activity_ball_location"
+            android:parentActivityName=".ExercisePlanActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.kedrad.selftherapyball.ExercisePlanActivity" />
