--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.github.ohoussein.playpauseview:playpauseview:1.0.2'
     implementation 'tk.zielony:carbon:0.15.0.1'
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
+    implementation 'com.kogitune:pre-lollipop-activity-transition:1.3.3'
 }
