--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'tk.zielony:carbon:0.15.0.1'
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
     implementation 'com.kogitune:pre-lollipop-activity-transition:1.3.3'
+    implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
+
 }
