--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     implementation 'pl.bclogic:pulsator4droid:1.0.3'
     implementation 'com.kogitune:pre-lollipop-activity-transition:1.3.3'
     implementation 'com.budiyev.android:circular-progress-bar:1.2.0'
-
+    implementation 'org.apache.commons:commons-lang3:3.5'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
