--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".IntroActivity" android:theme="@style/AppTheme.NoActionBar" android:label="@string/title_activity_introduction">
+        <activity
+            android:name=".IntroActivity"
+            android:label="@string/title_activity_introduction"
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
